🚀 Major Update: Interactive Code Blocks, Tables & LaTeX Support
✨ New Features:
• Fully customizable inline code with modern dark theme by default
• Interactive code blocks with syntax highlighting, copy, share & expand
• Interactive tables with CSV export, copy, share & expand functionality
• Interactive LaTeX code display with copy, share & expand features
• Hybrid rendering architecture for optimal performance

🎨 UI/UX Improvements:
• Professional dark theme throughout (#1A1A1A background)
• Modern rounded corners and consistent styling
• Responsive design for all screen sizes
• Smooth animations and haptic feedback
• Intuitive expand modals with drag-to-resize

🏗️ Architecture:
• Zero-configuration automatic detection
• Smart content type recognition (code/table/latex)
• Efficient painting for regular content + widgets for interactive content
• Backward compatible with existing markdown

📱 Demo App:
• 5 interactive tabs showcasing all features
• Comprehensive examples for developers
• Real-world use cases and demonstrations

🔧 Technical:
• Compatible with Flutter 3.24.0+ and Dart 3.5.0+
• No problematic dependencies
• Clean, maintainable code structure
• Full export of interactive widgets for direct use

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -34,6 +34,10 @@ dependencies:
     sdk: flutter
   flutter_md:
     path: ../
+  flutter_highlight: ^0.7.0
+  share_plus: ^10.0.0
+  path_provider: ^2.1.0
+  flutter_math_fork: ^0.7.2
 
 dev_dependencies:
   flutter_test:
