--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter:
     sdk: flutter
   meta: ^1.15.0
+  flutter_highlight: ^0.7.0
+  share_plus: ^10.0.0
+  path_provider: ^2.1.0
+  flutter_math_fork: ^0.7.2
 
 dev_dependencies:
   flutter_test:
