feat: Make ThinkBlock native to flutter_md package and improve blockquote styling
- Move ThinkBlock from final_markdown_widget.dart to lib/src/think_block.dart
- Export ThinkBlock from main flutter_md package
- Add google_fonts dependency for ThinkBlock typography
- Improve blockquote rendering with better spacing and margins
- Add subtle left border to blockquotes for classic quote appearance
- Add debug logging to markdown processing for troubleshooting
- Update final_markdown_widget.dart to use package ThinkBlock

This resolves the issue with jumbled blockquote appearance and makes ThinkBlock
a reusable component of the flutter_md package.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   share_plus: ^10.0.0
   path_provider: ^2.1.0
   flutter_math_fork: ^0.7.2
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
