--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   path_provider: ^2.1.0
   flutter_math_fork: ^0.7.2
   google_fonts: ^6.1.0
+  url_launcher: ^6.2.4
 
 dev_dependencies:
   flutter_test:
